yoshimi 1.5.11 M

2019-8-9 Will
* Added Rainer to people list in GUI.
* Updated dev_notes.

2019-8-6 Will
* Further refinements to ring buffer code.

2019-8-4 Will
* Reinstated Cormi_Sound bank.
  This seems to have been lost at some point.
* Revised specimen presets.
* Updated user guide.

2019-8-2 Will
* Created new CLI directory.
  Moved main command line files there
  ready to split them up.
* Moved buffered read and write from CmdInterface to MiscCLI.
* Most utility functions moved from CmdInterface to MiscCLI.

2019-8-1 Will
* Adjusted new instrument group controls to Yoshi standard.
* Implemented CLI access to group controls.
* Moved static lists from CmdInterface.h to TextLists.h
* Moved reply enums into dedicated namespace.

2019-7-31 Will
* Small bank refinements.
* Bank search window first starts with Piano.
* BugFix: Part not setting instrument labels.
* Updated Miscellany/Images
* Added protection against overlength lines in CLI.
  Max size is set to 252 chars but longest Yoshim1 command
  is less than 180.
* Disabled bank search window if not showing engine types.
* Added warning if no entries in bank search window.
* Re-enabling system effects does a cleanup first.
  this is so you don't get any stale data sounding.
* Cleanup also done when clearing bypass.

2019-7-30 Will
* Applied work-round so paste updates GUI effects.
* Small optimisation in mediate.
* Implemented bank search by type.

2019-7-29 Will
* GUI offset added to collect_readData.
* GUI offset added to collect_data.
* GUI offset added to fetchData.
* BugFix: Memory overrun in ring buffer.
* Moved envelope 'X' from miscmsg to offset.
* Updated docs.
* Corrected date.
* Moved formant vowel from miscmsg to offset.
* Updated docs.

2019-7-28 Will
* Copy-paste cleanups.
* Started separating miscmsg from other controls.
* Renamed all GUI par2 labels as miscmsg.
* Fixed regression CLI off by 1 history list loading.
* All CLI changes complete.

2019-7-27 Will